# pico-nu-pogodi

./: .gitmodules  CMakeLists.txt  README.md  main.c
.github/workflows/: release.yml
cpu/: core.c  core.h  operations.c  operations.h
data/: o.h
device/: def.h  graphic.c  graphic.h  input.c  input.h  rom.c  rom.h  sound.c  sound.h  sound.pio  system.c  system.h
resources/: NuPogodi.fzz
